--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -1,14 +1,20 @@
-<h1>Todos</h1>
-
-<input #itemInput
-  class="form-control"
-  (keyup.enter)="addItem(itemInput)">
-
-<div *ngIf="items" class="list-group" >
-  <button type="button"
-      @todoAnimations
-      *ngFor="let item of items"
-      (click)="removeItem(item)"
-      class="list-group-item"
-      >{{ item }}</button>
-</div> 
+<div
+@todosAnimations
+>
+  <h1>Todos</h1>
+  
+  <input #itemInput
+    class="form-control"
+    (keyup.enter)="addItem(itemInput)">
+  
+  <div *ngIf="items" class="list-group" >
+    <button type="button"
+        @todoAnimations
+        (@todoAnimations.start)="animationStarted($event)"
+        (@todoAnimations.done)="animationDone($event)"
+        *ngFor="let item of items"
+        (click)="removeItem(item)"
+        class="list-group-item"
+        >{{ item }}</button>
+  </div> 
+</div>
