--- a/src/app/zippy/zippy.component.html
+++ b/src/app/zippy/zippy.component.html
@@ -11,7 +11,11 @@
       }"
     ></span>
   </div>
-  <div class="zippy-body" [hidden]="!isExpanded">
+  <div 
+  [@expandCollapse]="isExpanded ? 'rasireno' : 'skupljeno'"
+  class="zippy-body" 
+  
+  ><!--[hidden]="!isExpanded" ovo si maknuo-->
     <ng-content></ng-content>
   </div>
 </div>
